Add Security, JWT and login page

--- a/chat-app-backend/build.gradle
+++ b/chat-app-backend/build.gradle
@@ -18,8 +18,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     runtimeOnly 'com.h2database:h2'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.2.0.RELEASE'
+    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.8'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.amqp:spring-rabbit-test'
-
     implementation(project(':chatapp-ui'))
+    compileOnly 'org.projectlombok:lombok:1.18.10'
+    annotationProcessor 'org.projectlombok:lombok:1.18.10'
+    compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.4.0-b180830.0359'
+    compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.5'
+
+
 }
