--- a/chat-app-backend/src/main/resources/application.properties
+++ b/chat-app-backend/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+
+
+#spring.jpa.database=POSTGRESQL
+#spring.datasource.platform=postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/chat-app
+#spring.datasource.username=postgres
+#spring.datasource.password=password
+#spring.jpa.properties.hibernate.default_schema=chat
