Add Chat ui and backend

--- a/chat-app-backend/build.gradle
+++ b/chat-app-backend/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
     compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.4.0-b180830.0359'
     compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.5'
-
+    compile 'com.rabbitmq:amqp-client:5.7.3'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-websocket', version: '2.2.1.RELEASE'
 
 }
