--- a/chat-app-backend/src/main/resources/application.properties
+++ b/chat-app-backend/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+jwt.secretKey=${SECRET_KEY}
 
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
